--- a/manual/blog-example/blog.yaml
+++ b/manual/blog-example/blog.yaml
@@ -1,3 +1,9 @@
 ---
 blog-index: index.md
-blog_title: Example Blog
+availability:
+  - file: post4.html
+    start: 22 May
+    end: 30 May
+  - file: post3.md
+    start: 19 May
+    end: 12 May
