First serious attempt at making webify run in background and constantly update websites based upon time availability.

--- a/manual/blog-example/blog.yaml
+++ b/manual/blog-example/blog.yaml
@@ -1,8 +1,8 @@
 ---
 availability:
   - file: post4.html
-    start: 22 May
-    end: 30 May 2025
+    start: 24 Aug
+    end: 
   - file: post3.md
     start: 19 May
     end: 12 May 2030
