--- a/webify/requirements.txt
+++ b/webify/requirements.txt
@@ -1,185 +1,22 @@
-appnope==0.1.0
-astroid==2.4.1
-attrs==19.3.0
-autopep8==1.5
-backcall==0.1.0
-bleach==3.1.0
-colorama==0.4.3
-decorator==4.4.1
-defusedxml==0.6.0
-entrypoints==0.3
-importlib-metadata==1.3.0
-ipykernel==5.1.3
-ipython==7.10.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.15.1
-Jinja2==2.10.3
+DateTime==4.3
+Jinja2==2.11.2
+json5==0.9.5
 jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.0.0
-jupyter-core==4.6.1
-keyboard==0.13.5
-lazy-object-proxy==1.4.3
+jupyter-client==6.1.3
+jupyter-core==4.6.3
+jupyterlab==2.1.5
+jupyterlab-server==1.1.5
 MarkupSafe==1.1.1
-mccabe==0.6.1
 mistune==0.8.4
-more-itertools==8.0.2
 nbconvert==5.6.1
-nbformat==4.4.0
-notebook==6.0.2
-numpy==1.17.4
+nbformat==5.0.7
+notebook==6.0.3
+packaging==20.4
 pandocfilters==1.4.2
-parso==0.5.1
-pathspec==0.5.9
-pathtools==0.1.2
-pexpect==4.7.0
-pgzero==1.2
-pickleshare==0.7.5
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-ptyprocess==0.6.0
-pycodestyle==2.5.0
-pygame==2.0.0.dev4
-Pygments==2.5.2
-pylint==2.5.2
+pathspec==0.8.0
 pynput==1.6.8
-pyobjc==6.2
-pyobjc-core==6.2
-pyobjc-framework-Accounts==6.2
-pyobjc-framework-AddressBook==6.2
-pyobjc-framework-AdSupport==6.2
-pyobjc-framework-AppleScriptKit==6.2
-pyobjc-framework-AppleScriptObjC==6.2
-pyobjc-framework-ApplicationServices==6.2
-pyobjc-framework-AuthenticationServices==6.2
-pyobjc-framework-AutomaticAssessmentConfiguration==6.2
-pyobjc-framework-Automator==6.2
-pyobjc-framework-AVFoundation==6.2
-pyobjc-framework-AVKit==6.2
-pyobjc-framework-BusinessChat==6.2
-pyobjc-framework-CalendarStore==6.2
-pyobjc-framework-CFNetwork==6.2
-pyobjc-framework-CloudKit==6.2
-pyobjc-framework-Cocoa==6.2
-pyobjc-framework-Collaboration==6.2
-pyobjc-framework-ColorSync==6.2
-pyobjc-framework-Contacts==6.2
-pyobjc-framework-ContactsUI==6.2
-pyobjc-framework-CoreAudio==6.2
-pyobjc-framework-CoreAudioKit==6.2
-pyobjc-framework-CoreBluetooth==6.2
-pyobjc-framework-CoreData==6.2
-pyobjc-framework-CoreHaptics==6.2
-pyobjc-framework-CoreLocation==6.2
-pyobjc-framework-CoreMedia==6.2
-pyobjc-framework-CoreMediaIO==6.2
-pyobjc-framework-CoreML==6.2
-pyobjc-framework-CoreMotion==6.2
-pyobjc-framework-CoreServices==6.2
-pyobjc-framework-CoreSpotlight==6.2
-pyobjc-framework-CoreText==6.2
-pyobjc-framework-CoreWLAN==6.2
-pyobjc-framework-CryptoTokenKit==6.2
-pyobjc-framework-DeviceCheck==6.2
-pyobjc-framework-DictionaryServices==6.2
-pyobjc-framework-DiscRecording==6.2
-pyobjc-framework-DiscRecordingUI==6.2
-pyobjc-framework-DiskArbitration==6.2
-pyobjc-framework-DVDPlayback==6.2
-pyobjc-framework-EventKit==6.2
-pyobjc-framework-ExceptionHandling==6.2
-pyobjc-framework-ExecutionPolicy==6.2
-pyobjc-framework-ExternalAccessory==6.2
-pyobjc-framework-FileProvider==6.2
-pyobjc-framework-FileProviderUI==6.2
-pyobjc-framework-FinderSync==6.2
-pyobjc-framework-FSEvents==6.2
-pyobjc-framework-GameCenter==6.2
-pyobjc-framework-GameController==6.2
-pyobjc-framework-GameKit==6.2
-pyobjc-framework-GameplayKit==6.2
-pyobjc-framework-ImageCaptureCore==6.2
-pyobjc-framework-IMServicePlugIn==6.2
-pyobjc-framework-InputMethodKit==6.2
-pyobjc-framework-InstallerPlugins==6.2
-pyobjc-framework-InstantMessage==6.2
-pyobjc-framework-Intents==6.2
-pyobjc-framework-IOSurface==6.2
-pyobjc-framework-iTunesLibrary==6.2
-pyobjc-framework-LatentSemanticMapping==6.2
-pyobjc-framework-LaunchServices==6.2
-pyobjc-framework-libdispatch==6.2
-pyobjc-framework-LinkPresentation==6.2
-pyobjc-framework-LocalAuthentication==6.2
-pyobjc-framework-MapKit==6.2
-pyobjc-framework-MediaAccessibility==6.2
-pyobjc-framework-MediaLibrary==6.2
-pyobjc-framework-MediaPlayer==6.2
-pyobjc-framework-MediaToolbox==6.2
-pyobjc-framework-Metal==6.2
-pyobjc-framework-MetalKit==6.2
-pyobjc-framework-ModelIO==6.2
-pyobjc-framework-MultipeerConnectivity==6.2
-pyobjc-framework-NaturalLanguage==6.2
-pyobjc-framework-NetFS==6.2
-pyobjc-framework-Network==6.2
-pyobjc-framework-NetworkExtension==6.2
-pyobjc-framework-NotificationCenter==6.2
-pyobjc-framework-OpenDirectory==6.2
-pyobjc-framework-OSAKit==6.2
-pyobjc-framework-OSLog==6.2
-pyobjc-framework-PencilKit==6.2
-pyobjc-framework-Photos==6.2
-pyobjc-framework-PhotosUI==6.2
-pyobjc-framework-PreferencePanes==6.2
-pyobjc-framework-PubSub==6.2
-pyobjc-framework-PushKit==6.2
-pyobjc-framework-Quartz==6.2
-pyobjc-framework-QuickLookThumbnailing==6.2
-pyobjc-framework-SafariServices==6.2
-pyobjc-framework-SceneKit==6.2
-pyobjc-framework-ScreenSaver==6.2
-pyobjc-framework-ScriptingBridge==6.2
-pyobjc-framework-SearchKit==6.2
-pyobjc-framework-Security==6.2
-pyobjc-framework-SecurityFoundation==6.2
-pyobjc-framework-SecurityInterface==6.2
-pyobjc-framework-ServiceManagement==6.2
-pyobjc-framework-Social==6.2
-pyobjc-framework-SoundAnalysis==6.2
-pyobjc-framework-Speech==6.2
-pyobjc-framework-SpriteKit==6.2
-pyobjc-framework-StoreKit==6.2
-pyobjc-framework-SyncServices==6.2
-pyobjc-framework-SystemConfiguration==6.2
-pyobjc-framework-SystemExtensions==6.2
-pyobjc-framework-UserNotifications==6.2
-pyobjc-framework-VideoSubscriberAccount==6.2
-pyobjc-framework-VideoToolbox==6.2
-pyobjc-framework-Vision==6.2
-pyobjc-framework-WebKit==6.2
-pypandoc==1.4
-pyrsistent==0.15.6
+pypandoc==1.5
 pystache==0.5.4
 python-dateutil==2.8.1
-PyYAML==5.2
-pyzmq==18.1.1
-qtconsole==4.6.0
-Send2Trash==1.5.0
-six==1.14.0
-terminado==0.8.3
-testpath==0.4.4
-toml==0.10.1
-tornado==6.0.3
-traitlets==4.3.3
-typed-ast==1.4.1
-virtualenv==16.7.9
+PyYAML==5.3.1
 watchdog==0.10.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-zipp==0.6.0
