--- a/manual/root.yaml
+++ b/manual/root.yaml
@@ -1,7 +1,7 @@
 availability:
   - file: introduction.md
-    start: 19 May
-    end: 22 May 2030
+    start: 19 May 2017
+    end: 22 May 2035
 
 ignore:
   - file: rc.png
