--- a/webify/Dockerfile
+++ b/webify/Dockerfile
@@ -1,10 +1,18 @@
-FROM ubuntu
+FROM python:3.9
 
 RUN apt-get update -y
-RUN apt-get upgrade -y 
-RUN apt-get install -y python3-venv python3-dev build-essential python3-pip
+RUN apt-get upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y texlive-full
 RUN apt-get install -y pandoc
-WORKDIR /app
-COPY . /app
-RUN pip3 install -r /app/requirements.txt
+
+ADD . /webify
+RUN pip3 install -r /webify/requirements.txt
+
+ENV WEBIFY_DIR=/webify
+ENV WEBIFY_PYTHON=python3
+ENV DISPLAY=:0
+ENV PATH=$PATH:/webify
+
+WORKDIR /webify
+
+CMD ['/bin/sh']
