--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ tests/mdfile-test/a-html-document-2.pdf
 tests/mdfile-test/foo.html
 webify/a-html-document-2.html
 tests/mdfile-test/\=3.1.4
+
+webify/build
+webify/dist
+webify/w.spec
