--- a/webify/requirements.txt
+++ b/webify/requirements.txt
@@ -20,7 +20,7 @@ pystache>=0.5.4
 python-dateutil==2.8.1
 PyYAML==5.4
 watchdog>=0.10.2
-pyobjc==7.3
+# pyobjc==7.3  # May be we only need it on osx.
 
 # pynpt errors.  
 # pip install --upgrade pyobjc==7.3
